[package]
name = "pico"
version = "0.1.0"
edition = "2021"
authors = ["Sylvia Waldron"]
description = "A small image editor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24"
clap = { version = "4.1", features = ["derive"] }
ordered-float = "3.4"